After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732471 - Unmounting a network connection while transferring crashes nautilus when reconnecting to that network due to dropped reference in file-roller plugin
Unmounting a network connection while transferring crashes nautilus when reco...
Status: RESOLVED FIXED
Product: file-roller
Classification: Applications
Component: general
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: Paolo Bacchilega
file-roller-maint
Depends on:
Blocks:
 
 
Reported: 2014-06-30 10:37 UTC by Christopher M. Penalver
Modified: 2014-07-11 17:08 UTC
See Also:
GNOME target: ---
GNOME version: 3.7/3.8


Attachments
Add missing unref when accessing NautilusFileInfo object (912 bytes, patch)
2014-07-11 07:32 UTC, Robert Ancell
none Details | Review

Description Christopher M. Penalver 2014-06-30 10:37:25 UTC
Downstream report:
https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/1335811

1) lsb_release -rd
Description:	Ubuntu 14.04 LTS
Release:	14.04

2)  apt-cache policy nautilus
nautilus:
  Installed: 1:3.10.1-0ubuntu9.1
  Candidate: 1:3.10.1-0ubuntu9.1
  Version table:
 *** 1:3.10.1-0ubuntu9.1 0
        500 http://us.archive.ubuntu.com/ubuntu/ trusty-updates/main amd64 Packages
        100 /var/lib/dpkg/status
     1:3.10.1-0ubuntu8 0
        500 http://us.archive.ubuntu.com/ubuntu/ trusty/main amd64 Packages

apt-cache policy gnome-session-fallback
gnome-session-fallback:
  Installed: 1:3.8.0-1ubuntu12
  Candidate: 1:3.8.0-1ubuntu12
  Version table:
 *** 1:3.8.0-1ubuntu12 0
        500 http://us.archive.ubuntu.com/ubuntu/ trusty-updates/universe amd64 Packages
        100 /var/lib/dpkg/status
     1:3.8.0-1ubuntu11 0
        500 http://us.archive.ubuntu.com/ubuntu/ trusty/universe amd64 Packages

3) What is expected to happen is when one initiates a nfs4 mounted file transfer from Ubuntu 14.04 using a nautilus window, and then cancels the transfer via clicking the button with a red circle with a white x in the File Operations window,  then initiates the same transfer, it begins with minimal delay.

4) What happens instead is the new File Operations window opens but doesn't actually progress. As well, when one attempts to cancel this new File Operations window by clicking the cancel button, the button shows as if it is depressed, but doesn't actually cancel the transfer, and simply remains. Killing all the gvfs processes didn't recover the window, so it would appear to be a nautilus issue.

The only WORKAROUND would be to restart, as restarting nautilus doesn't smoothly recover, causes all the desktop icons to disappear, and will no longer come up when initiated by a terminal.

ProblemType: Bug
DistroRelease: Ubuntu 14.04
Package: nautilus 1:3.10.1-0ubuntu9.1
ProcVersionSignature: Ubuntu 3.13.0-30.54-generic 3.13.11.2
Uname: Linux 3.13.0-30-generic x86_64
NonfreeKernelModules: fglrx
ApportVersion: 2.14.1-0ubuntu3.2
Architecture: amd64
CurrentDesktop: Unity
Date: Mon Jun 30 05:21:37 2014
GsettingsChanges: b'org.gnome.nautilus.list-view' b'default-column-order' b"['name', 'size', 'type', 'date_modified', 'date_accessed', 'owner', 'group', 'permissions', 'mime_type', 'where']"
InstallationDate: Installed on 2014-06-21 (8 days ago)
InstallationMedia: Ubuntu 14.04 LTS "Trusty Tahr" - Release amd64 (20140417)
SourcePackage: nautilus
UpgradeStatus: No upgrade log present (probably fresh install)
Comment 1 Robert Ancell 2014-07-11 07:28:55 UTC
It turns out this is actually a bug in the File Roller plugin. This plugin doesn't unref a NautilusFile object and it triggers the same symptom as bug 708282.
Comment 2 Robert Ancell 2014-07-11 07:32:17 UTC
Created attachment 280472 [details] [review]
Add missing unref when accessing NautilusFileInfo object
Comment 3 Paolo Bacchilega 2014-07-11 17:08:37 UTC
Patch applied to master and gnome-3-12, thank you.