Add missing unref when accessing NautilusFileInfo object.

This caused Nautilus to crash when unmounting a network connection while transferring and then reconnecting to that service.

https://bugzilla.gnome.org/show_bug.cgi?id=732471